# LLMs_Amazing_courses_Langchain_LlamaIndex

./: .gitignore  1-chatbots.ipynb  README.md  README_ENG.md  api_test.py  building_llm_app_wandb.ipynb  clean_notebooks.py  restore_notebooks.sh  vectorretriever.ipynb
1.2-ollama/: app.py
1_pdf_example/: TPASS_PDF_simple_RAG.ipynb
202409_LangGraph/: README_English.md
3.2-DataIngestion/: 3.2-DataIngestion.ipynb
3.3-Data Trnasformer/: 3.3-RecuriveCharactertextsplitter.ipynb  3.4-CharacterTextsplitter.ipynb  3.5-HTMLtextsplitter.ipynb  3.6-RecursiveJsonSplitter.ipynb
4-Embeddings/: 4.1-embedding.ipynb  4.2-ollamaemnedding.ipynb  4.3-huggingface.ipynb
4-RAG Document Q&A/: app_huggingfaceembedding.py  main.py
4.1-RAG Q&A Conversation/: app.py
5-Search Engine/: app.py  tools_agents.ipynb
5-VectorStore/: 5.1-Faiss.ipynb  5.2-Chroma.ipynb
6-Chat SQL/: app.py  app2.py  requirements.txt  sqlite.py  student.db
7-Text Summarization/: app.py  text_summarization.ipynb
8-mutimodal-pdf-RAG/: main.py
9-MathwithGemma/: app.py
Accelerated_DataScience_CudaGPU/: data_sources
AgenticLLM_WebScraper_Project/: __init__.py  autosearch.py  chat_agent.py  firecrawl_demo.py  firecrawl_test.py  jina_embedding.py  pyproject.toml  reader.py  scraper.py  searcher.py  youtube_scraper.py
AutoAgent/: README.md
NewestRAG_Agent_course_folder/WebCrawl_LLM_applications/: autosearch.py  chat_agent.py  downloaded_catalog.md  firecrawl_demo.py  jina_embedding.py  jina_muti_reader.py  llamaindex_embedding.py  page_shot_response.py  pyproject.toml  reader.py  reranker.py  searcher.py  youtube_scraper.py
ai-engineering-hub/agentic_rag/: .env.example  README.md  app.py  app_deep_seek.py  app_llama3.2.py  pyproject.toml
ai-engineering-hub/agentic_rag/src/agentic_rag/: crew.py
ai-engineering-hub/agentic_rag/src/agentic_rag/config/: tasks.yaml
ai-engineering-hub/agentic_rag/src/agentic_rag/tools/: custom_tool.py
(+459 files in other folders)
